1999-04-11  James Henstridge <james@daa.com.au>

	* esound.spec.in: moved %{prefix}/lib/lib*.so files to the main
	esound package from the devel one, as esddsp requires them to
	function correctly.

Thu Apr  8 23:08:56 PDT 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4
	* ltconfig
	* ltmain.sh: libtool 1.2f

	* esd.c: use INADDR constants instead of inet_addr calls (was
	broken before)

	* esddsp.c: minor tweaks

1999-03-30  The Rasterman <raster@rasterman.com>
        * esdlib.c, esd.c: added UNIX domain sockets as the "default" 
	  (less overhead than tcp/ip for a local machine - better for
	  less soudn breakup) - as well as =ctp option for tcp/ip mode.
	  Also made esd auto fallback to 8bit, mono and lower sampling
	  rates if the device cannot handle it.
	  
1999-03-09  The Rasterman <raster@rasterman.com>
	* esdlib.c, esd.c: added SIGPIPE handlers and wrappign in all 
	  libesd calls so "death" of esd and connection is trapped
	  properly. Also added to auth protocol a "reply" for auth so
	  authorisation is known at socket open time. same for esd.
	  Tested and works. 

1999-02-20  Yo Ric Dude  <ericmit@ix.netcom.com>

	* README, TIPS, TODO: updates
	* configure.in: call it 0.2.8. [and there was much rejoicing...]

1999-02-16  Yo Ric Dude  <ericmit@ix.netcom.com>


	* esd-server.h, esd.c, proto.c: added forced standby tracker for
	greater accuracy in tracking forced standby vs. autostandby modes
	* clients.c: autostandby/standby cpu buglet
	* esd.h, proto.c, esdmgr.c: added ability to get server mode,
	e.g. standby, autostandby, running, etc.
	* many other modules: -Wall clean up

	* players.c, proto.c, samples.c: gracefully handle error
 	conditions from ESD_READ_*, i.e. check return values.

Mon Feb 15 18:19:31 EST 1999 Mandrake <mandrake@mandrake.net>
	* esdlib.c: boy am I getting tired of reading the
	"cannot connect to esound server" error message whenever I don't
	have esd running from that file.  there needs to be a better