@@ -1,0 +1,3 @@
+[esd]
+auto_spawn=1
+spawn_options=-terminate -nobeeps -as 2
